--- a/registration-app/public/css/style.css
+++ b/registration-app/public/css/style.css
@@ -1,4 +1,91 @@
 /********** Template CSS **********/
+/* Enroll.css */
+
+/* Page Content */
+.page-content {
+    background-image: url('/img/bg7.jpg');
+    background-size: cover;
+    background-position: top center;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .card-container {
+    max-width: 400px;
+    width: 100%;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+    background-color: #fff;
+  }
+  
+  /* Card Header */
+  .card-header {
+    text-align: center;
+    margin-bottom: 20px;
+    background-color: transparent;
+  }
+  
+  .card-header h2 {
+    color: #88B44E;
+  }
+  
+  /* Divider */
+  .divider {
+    text-align: center;
+    margin-top: 15px;
+    font-size: 14px;
+    color: #888;
+  }
+  
+  /* Card Body */
+  .form-container {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  /* Custom Input */
+  .custom-input {
+    margin-bottom: 15px;
+  }
+  
+  .input-label {
+    margin-bottom: 5px;
+    color: #555;
+  }
+  
+  .input-wrapper {
+    position: relative;
+  }
+  
+  .input-field {
+    width: 100%;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ddd;
+  }
+  
+  .icon {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    color: #888;
+  }
+  
+  /* Card Footer */
+  .submit-button {
+    background-color: #00bcd4;
+    color: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    border: none;
+  }
+  
 :root {
     --primary: #88B44E;
     --secondary: #FB9F38;
