added: home page information and course type explaination

--- a/registration-app/public/css/style.css
+++ b/registration-app/public/css/style.css
@@ -592,3 +592,7 @@
 .copyright a:hover {
     color: #FFFFFF !important;
 }
+
+.indented {
+    text-indent: 2em; /* Adjust the indentation as needed */
+  }
