--- a/registration-app/public/css/style.css
+++ b/registration-app/public/css/style.css
@@ -1,7 +1,6 @@
 /********** Template CSS **********/
 /* Enroll.css */
 .page-content {
-    background-image: url('/img/Green Balloon Dog.png');
     background-size: cover;
     background-position: top center;
     min-height: 100vh;
@@ -38,7 +37,7 @@
     text-align: center;
     margin-top: 15px;
     font-size: 20px;
-    color: #FFFFFF;
+    color: #000000;
   }
   
   /* Card Body */
@@ -54,7 +53,7 @@
   
   .input-label {
     margin-bottom: 5px;
-    color: #ffffff;
+    color: #000000;
   }
   
   .input-wrapper {
@@ -601,22 +600,22 @@
     border: 2px solid #ccc;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    
-}
-.profile-picture {
-    width: 200px;
+  }
+  
+  .profile-picture {
+    display: flex; /* เพิ่ม display: flex เพื่อให้รูปและชื่ออยู่ในตำแหน่งเดียวกัน */
+    flex-direction: column; /* กำหนดให้รูปและชื่ออยู่ในคอลัมน์เดียวกัน */
+    align-items: center; /* กำหนดให้จุดศูนย์กลางของรูปและชื่ออยู่ตรงกลาง */
+  }
+  
+  .profile-picture img {
+    width: 200px; /* ลดขนาดรูปเพื่อให้มองเห็นชื่อได้ชัดเจน */
     height: 200px;
     border-radius: 50%;
-    overflow: hidden;
-    align-items: flex-start;
-    flex-shrink: 0; /* ไม่ให้รูปภาพย่อเมื่อขนาดหน้าจอเล็กลง */
-    margin-right: 130px; /* เพื่อให้มีช่องว่างระหว่างรูปภาพกับข้อมูล */
-}
-.profile-picture img {
-    width: 100%;
-    height: 100%;
     object-fit: cover;
-}
-.profile-details h2 {
-    margin-top: 0;
-}
+  }
+  
+  .profile-details {
+    margin-left: 20px; /* เพิ่ม margin-left เพื่อเว้นระยะห่างระหว่างข้อมูลและรูป */
+  }
+
