updated: course page

--- a/registration-app/public/css/style.css
+++ b/registration-app/public/css/style.css
@@ -697,3 +697,13 @@
     overflow: hidden;
     margin: 0;
 }
+
+.properties__card {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+  
+.properties__caption {
+    flex-grow: 1;
+}
