changed: Font family & style

--- a/registration-app/public/css/style.css
+++ b/registration-app/public/css/style.css
@@ -3,20 +3,23 @@
 .-center {
     display: flex;
     justify-content: center;
-  }
-.-search-input{
+}
+
+.-search-input {
     height: 100%;
     width: 100%;
     padding: 0;
     border: none;
     padding-left: 2em;
 }
-.-search{
+
+.-search {
     width: 100%;
     height: 40px;
     display: flex;
     justify-content: center;
 }
+
 .-btn-search {
     width: 64px;
     height: 100%;
@@ -28,8 +31,9 @@
     border: 1px solid #ccc;
     border-left: 0;
     cursor: pointer;
-  }
-  .-search-box {
+}
+
+.-search-box {
     width: 514px;
     display: grid;
     grid-template-columns: auto;
@@ -38,10 +42,12 @@
     border: 1px solid #ccc;
     border-radius: 40px 0 0 40px;
     overflow: hidden;
-  }
-.-search-input:focus-visible{
+}
+
+.-search-input:focus-visible {
     outline: none;
 }
+
 /* Enroll.css */
 .page-content {
     background-size: cover;
@@ -62,65 +68,66 @@
     box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
     border: 2px solid rgba(255, 255, 255, 0.1);
     padding: 35px 35px;
-    backdrop-filter: blur(15px); /* ใช้ backdrop-filter เพื่อทำให้พื้นหลังเบลอ */
+    backdrop-filter: blur(15px);
+    /* ใช้ backdrop-filter เพื่อทำให้พื้นหลังเบลอ */
 }
-  
-  /* Card Header */
-  .card-header {
+
+/* Card Header */
+.card-header {
     text-align: center;
     margin-bottom: 20px;
     background-color: transparent;
-  }
-  
-  .card-header h2 {
-    color: #E60073 ;
-  }
-  
-  /* Divider */
-  .divider {
+}
+
+.card-header h2 {
+    color: #E60073;
+}
+
+/* Divider */
+.divider {
     text-align: center;
     margin-top: 15px;
     font-size: 20px;
     color: #000000;
-  }
-  
-  /* Card Body */
-  .form-container {
+}
+
+/* Card Body */
+.form-container {
     display: flex;
     flex-direction: column;
-  }
-  
-  /* Custom Input */
-  .custom-input {
+}
+
+/* Custom Input */
+.custom-input {
     margin-bottom: 15px;
-  }
-  
-  .input-label {
+}
+
+.input-label {
     margin-bottom: 5px;
     color: #000000;
-  }
-  
-  .input-wrapper {
+}
+
+.input-wrapper {
     position: relative;
-  }
-  
-  .input-field {
+}
+
+.input-field {
     width: 100%;
     padding: 10px;
     border-radius: 10px;
     border: 1px solid #ddd;
-  }
-  
-  .icon {
+}
+
+.icon {
     position: absolute;
     top: 50%;
     right: 10px;
     transform: translateY(-50%);
     color: #888;
-  }
-  
-  /* Card Footer */
-  .submit-button {
+}
+
+/* Card Footer */
+.submit-button {
     background-color: #00bcd4;
     color: #fff;
     padding: 10px;
@@ -128,22 +135,22 @@
     cursor: pointer;
     transition: background-color 0.3s;
     border: none;
-  }
-  
+}
+
 :root {
     --primary: #E60073;
     --secondary: #FB9F38;
     --light: #F5F8F2;
     --dark: #252C30;
     --rad: .7rem;
-  --dur: .3s;
-  --color-dark: #2f2f2f;
-  --color-light: #fff;
-  --color-brand: #57bd84;
-  --font-fam: 'Lato', sans-serif;
-  --height: 5rem;
-  --btn-width: 6rem;
-  --bez: cubic-bezier(0, 0, 0.43, 1.49);
+    --dur: .3s;
+    --color-dark: #2f2f2f;
+    --color-light: #fff;
+    --color-brand: #57bd84;
+    --font-fam: 'Lato', sans-serif;
+    --height: 5rem;
+    --btn-width: 6rem;
+    --bez: cubic-bezier(0, 0, 0.43, 1.49);
 }
 
 .back-to-top {
@@ -256,7 +263,7 @@
 .navbar .dropdown-toggle::after {
     border: none;
     content: "\f107";
-    font-family: "Font Awesome 5 Free";
+    font-family: "Athiti";
     font-weight: 900;
     vertical-align: middle;
     margin-left: 8px;
@@ -268,14 +275,16 @@
         height: 100px;
     }
 
-    .navbar .navbar-nav .nav-link  {
+    .navbar .navbar-nav .nav-link {
         margin-right: 0;
         padding: 10px 0;
+        text-align: end;
     }
 
     .navbar .navbar-nav {
         margin-top: 75px;
         border-top: 1px solid #EEEEEE;
+        text-align: end;
     }
 }
 
@@ -284,6 +293,7 @@
         display: block;
         border: none;
         margin-top: 0;
+        margin-right: 0;
         top: 150%;
         opacity: 0;
         visibility: hidden;
@@ -293,6 +303,7 @@
     .navbar .nav-item:hover .dropdown-menu {
         top: 100%;
         visibility: visible;
+        margin-right: 0;
         transition: .5s;
         opacity: 1;
     }
@@ -329,7 +340,7 @@
         position: relative;
         min-height: 450px;
     }
-    
+
     #header-carousel .carousel-item img {
         position: absolute;
         width: 100%;
@@ -542,10 +553,11 @@
     transition: .5s;
     border-radius: 10px;
 }
+
 .p-4 p {
     overflow-wrap: break-word;
     word-wrap: break-word;
-  }
+}
 
 .store-item:hover .store-overlay {
     opacity: 1;
@@ -625,7 +637,7 @@
 .footer .btn.btn-link::before {
     position: relative;
     content: "\f105";
-    font-family: "Font Awesome 5 Free";
+    font-family: "Athiti";
     font-weight: 900;
     color: var(--primary);
     margin-right: 10px;
@@ -657,97 +669,121 @@
     border: 2px solid #ccc;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  .profile-picture {
-    display: flex; /* เพิ่ม display: flex เพื่อให้รูปและชื่ออยู่ในตำแหน่งเดียวกัน */
-    flex-direction: column; /* กำหนดให้รูปและชื่ออยู่ในคอลัมน์เดียวกัน */
-    align-items: center; /* กำหนดให้จุดศูนย์กลางของรูปและชื่ออยู่ตรงกลาง */
-  }
-  
-  .profile-picture img {
-    width: 200px; /* ลดขนาดรูปเพื่อให้มองเห็นชื่อได้ชัดเจน */
+}
+
+.profile-picture {
+    display: flex;
+    /* เพิ่ม display: flex เพื่อให้รูปและชื่ออยู่ในตำแหน่งเดียวกัน */
+    flex-direction: column;
+    /* กำหนดให้รูปและชื่ออยู่ในคอลัมน์เดียวกัน */
+    align-items: center;
+    /* กำหนดให้จุดศูนย์กลางของรูปและชื่ออยู่ตรงกลาง */
+}
+
+.profile-picture img {
+    width: 200px;
+    /* ลดขนาดรูปเพื่อให้มองเห็นชื่อได้ชัดเจน */
     height: 200px;
     border-radius: 50%;
     object-fit: cover;
-  }
-  
-  .profile-details {
-    margin-left: 20px; /* เพิ่ม margin-left เพื่อเว้นระยะห่างระหว่างข้อมูลและรูป */
-  }
+}
+
+.profile-details {
+    margin-left: 20px;
+    /* เพิ่ม margin-left เพื่อเว้นระยะห่างระหว่างข้อมูลและรูป */
+}
 
 .ellipsis {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
 .mb-55 {
     margin-bottom: 55px;
 }
+
 .section-padding40 {
     padding-top: 50px;
     padding-bottom: 100px;
 }
+
 .fix {
     overflow: hidden;
 }
-.row{
+
+.row {
     display: flex;
     flex-wrap: wrap;
     margin-right: -15px;
     margin-left: -15px;
 }
+
 .courses-area .properties.properties2 {
     margin-bottom: 30px;
 }
+
 .courses-area .properties {
     margin: 0 15px;
 }
+
 .courses-area .properties__card {
-    box-shadow: 0px 6px 6px 0px rgba(2,25,65,0.08);
+    box-shadow: 0px 6px 6px 0px rgba(2, 25, 65, 0.08);
     border-radius: 10px;
     transition: .4s;
 }
+
 .properties__img img {
     width: 100%;
-    border-radius: 10px 10px 0 0; /* เพิ่มขอบมนเพื่อทำให้มีรูปร่างของ card */
-  }
+    border-radius: 10px 10px 0 0;
+    /* เพิ่มขอบมนเพื่อทำให้มีรูปร่างของ card */
+}
 
 .detail__img img {
     width: 50%;
-    border-radius: 10px; /* เพิ่มขอบมนเพื่อทำให้มีรูปร่างของ card */
-    margin: 0 auto; /* จัดให้รูปภาพอยู่ตรงกลาง */
+    border-radius: 10px;
+    /* เพิ่มขอบมนเพื่อทำให้มีรูปร่างของ card */
+    margin: 0 auto;
+    /* จัดให้รูปภาพอยู่ตรงกลาง */
 }
+
 .overlay1 {
     position: relative;
     z-index: 1;
 }
+
 .courses-area .properties__caption {
     padding: 29px 20px 20px 20px;
 }
+
 .properties__footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-  }
+}
+
 .courses-area .properties__footer {
     margin-bottom: 22px;
     transition: .4s;
 }
-@media (max-width: 575px){
+
+@media (max-width: 575px) {
     .courses-area .properties__footer {
-    padding: 19px 10px 20px 12px;
-}}
+        padding: 19px 10px 20px 12px;
+    }
+}
+
 .border-btn.border-btn2 {
     width: 100%;
     text-align: center;
     border: 1px solid #E2E4FF;
     color: #4255A4;
 }
+
 .border-btn {
     border: 1px solid #FF9F67;
     color: #FF9F67;
-    font-family: "Josefin Sans", sans-serif;
+    font-family: "Noto Sans Thai", sans-serif;
     background: none;
     border-radius: 5px;
     text-transform: capitalize;
@@ -771,7 +807,7 @@
     flex-direction: column;
     height: 100%;
 }
-  
+
 .properties__caption {
     padding: 29px 20px 20px 20px;
     flex-grow: 1;
@@ -785,6 +821,40 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+
+@media (max-width: 767px) {
+    .properties__card {
+        height: 540px !important;
+        /* Set the height to 500px for screens less than 768px wide */
+    }
+}
+
+.properties__caption h3 {
+    max-height: 2.8em;
+    /* Adjust the height as needed to fit two lines */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    /* Limit the number of lines to 2 */
+    -webkit-box-orient: vertical;
+    color: #E90073;
+}
+
+.properties__caption h3 {
+    max-height: 2.8em;
+    /* Adjust the height as needed to fit two lines */
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    /* Limit the number of lines to 2 */
+    -webkit-box-orient: vertical;
+    color: #E90073;
+}
+
 /* search */
 
 .fixed-search {
