--- a/registration-app/public/css/style.css
+++ b/registration-app/public/css/style.css
@@ -777,6 +777,7 @@
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+    background-color: #FFFFFF;
 }
 
 .properties__caption p {
@@ -793,6 +794,9 @@
     z-index: 1000;
 }
 /* detail */
+body {
+    background-color: #f5f5f5; /* สีพื้นหลังของหน้าเว็บ */
+  }
 .detailcard {
     max-width: 800px;
     margin: 100px auto 0;
@@ -817,6 +821,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center; /* จัดให้เนื้อหาตรงกลางแนวตั้ง */
+    background-color: #FFFFFF;
   }
   
   .detailcard-title {
@@ -828,4 +833,53 @@
   .card-text {
     font-size: 1rem;
     margin-bottom: 10px;
+  }
+  /* home */
+  .card {
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    display: inline-block; /* ใช้แบบ inline-block เพื่อให้การ์ดมีขนาดพอดีกับเนื้อหาภายใน */
+    width: fit-content; /* ให้การ์ดมีความกว้างเท่ากับเนื้อหาข้างใน */
+    max-width: 100%; /* กำหนดความกว้างสูงสุดเป็น 100% เพื่อป้องกันการเกินขอบเขต */
+  }
+  .card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; /* จัดให้เนื้อหาตรงกลางแนวนอน */
+    
+  }
+
+  .card-title {
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #1d1d1f;
+    text-align: center; /* จัดให้หัวข้ออยู่ตรงกลาง */
+    margin-top: 1.5em;
+    margin-bottom: 1.5rem; /* เพิ่มระยะห่างระหว่างหัวข้อกับเนื้อหา */
+  }
+
+  .card-text {
+    font-size: 1rem;
+    color: #1d1d1f;
+    margin-top: auto; /* ให้ข้อความมีระยะห่างบนล่างเท่ากัน */
+    
+  }
+  
+  .card-img-top1 {
+    border-radius: 15px 0 0 15px;;
+    object-fit: cover; /* ทำให้รูปภาพทำเต็มพื้นที่ของการ์ดโดยไม่เกินขอบ */
+    height: 100%; /* ให้รูปภาพทำเต็มสูงของการ์ด */
+    width: 100%; /* ให้รูปภาพทำเต็มกว้างของการ์ด */
+  }
+  .card-img-top2 {
+    border-radius: 0 15px 15px 0;
+    object-fit: cover; /* ทำให้รูปภาพทำเต็มพื้นที่ของการ์ดโดยไม่เกินขอบ */
+    height: 100%; /* ให้รูปภาพทำเต็มสูงของการ์ด */
+    width: 100%; /* ให้รูปภาพทำเต็มกว้างของการ์ด */
+  }
+  .indented {
+    text-indent: 2em;
+    margin-bottom: 0; /* ลบระยะห่างด้านล่างของข้อความ */
   }
