--- a/registration-app/public/css/style.css
+++ b/registration-app/public/css/style.css
@@ -64,7 +64,7 @@
     width: 100%;
     padding: 20px;
     border-radius: 10px;
-    background-color: rgba(255, 255, 255, 0.13);
+    background-color: #FFFFFF;
     box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
     border: 2px solid rgba(255, 255, 255, 0.1);
     padding: 35px 35px;
