--- a/registration-app/public/css/style.css
+++ b/registration-app/public/css/style.css
@@ -1007,7 +1007,7 @@ body {
   .card-title {
     font-size: 1.5rem;
     font-weight: bold;
-    color: #1d1d1f;
+    color: #E90073;
     text-align: center; /* จัดให้หัวข้ออยู่ตรงกลาง */
     margin-top: 1.5em;
     margin-bottom: 1.5rem; /* เพิ่มระยะห่างระหว่างหัวข้อกับเนื้อหา */
