--- a/registration-app/public/css/style.css
+++ b/registration-app/public/css/style.css
@@ -1112,3 +1112,76 @@ body {
       width: calc(100% - 20px); /* เมื่อหน้าจอเล็กกว่าหรือเท่ากับ 768px กำหนดขนาดการ์ดให้เต็ม container และลบช่องว่างระหว่างการ์ดออก */
     }
   }
+
+  /* ======================= Cards Dash ====================== */
+  .cardBox {
+    position: relative;
+    width: 100%;
+    padding: 20px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-gap: 30px;
+  }
+  
+  .cardBox .carddash {
+    position: relative;
+    background: #FFFFFF;
+    padding: 30px;
+    border-radius: 20px;
+    display: flex;
+    justify-content: space-between;
+    cursor: pointer;
+    box-shadow: 0 7px 25px rgba(0, 0, 0, 0.08);
+  }
+  
+  .cardBox .carddash .numbers {
+    position: relative;
+    font-weight: 500;
+    font-size: 2.5rem;
+    color: #e90073;
+  }
+  
+  .cardBox .carddash .cardName {
+    color: #252c30;
+    font-size: 1.1rem;
+    margin-top: 5px;
+  }
+  
+  .cardBox .carddash .iconBx {
+    font-size: 3.5rem;
+    color: #e90073;
+  }
+  
+  .cardBox .carddash:hover {
+    background: var(--blue);
+  }
+  .cardBox .carddash:hover .numbers,
+  .cardBox .carddash:hover .cardName,
+  .cardBox .carddash:hover .iconBx {
+    color: var(--white);
+  }
+
+  /* ====================== Responsive Design ========================== */
+@media (max-width: 991px) {
+    .cardBox {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+  
+  @media (max-width: 768px) {
+    .details {
+      grid-template-columns: 1fr;
+    }
+    .recentOrders {
+      overflow-x: auto;
+    }
+    .status.inProgress {
+      white-space: nowrap;
+    }
+  }
+  
+  @media (max-width: 480px) {
+    .cardBox {
+      grid-template-columns: repeat(1, 1fr);
+    }
+  }
